@startuml
hide empty description

[*] --> Entry

Entry --> NetworkConnected : AT+CGATT

NetworkConnected --> GPRSOn : AT+CIICR
GPRSOn --> NetworkConnected : AT+CIICR

GPRSOn --> Connected : AT+CIPSTART
Connected --> GPRSOn : AT+CIPCLOSE

Connected --> DataMode : ATO
DataMode --> Connected : +++

NetworkConnected --> Calling : ATD
Calling --> NetworkConnected : ATH

Calling --> CallMode : ATC
CallMode --> Calling : +++

@enduml